new changes added

--- a/login_page.html
+++ b/login_page.html
@@ -18,15 +18,15 @@
             <div class="txt_field">
                 <span></span>
                 <input type="text" name="" value="" required>
-                <label for="username">username</label>
+                <label for="username">Username</label>
             </div>
 
             <div class="txt_field">
                 <span></span>
                 <input type="password" name="" value="" required>
-                <label for="password">password</label>
+                <label for="password">Password</label>
             </div>
-            <div class="forget">forget password?</div>
+            <div class="forget">Forget Password?</div>
             <input type="submit" value="Login" class="enter">
             <div class="signup">
                 Not a Member? <a href="#">sign up</a>
